# mjlab

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  go1_getup.xml  mjlab.sh  pyproject.toml
.github/workflows/: ci.yml  pyright.yml
docs/: creat_new_task  creat_new_task.md  create_new_task.md  faq.md  getting_started.md  migration_guide.md  motivation.md
mjlab/: __init__.py
mjlab/_src/: __init__.py  collision.py  entity.py  mjx_env.py  mjx_task.py  registry.py  reward.py  sim_structs.py  types.py
mjlab/_src/arenas/: __init__.py  arena.py  flat_terrain.py
mjlab/asset_zoo/terrains/: flat_terrain.py
mjlab/control_suite/: __init__.py  cartpole.py  cartpole.xml  common.xml  g1.py  g1.xml  g1_constants.py  go1.py  go1.xml  humanoid.py  humanoid.xml  utils.py
mjlab/core/: __init__.py  editors.py  entity.py  mjx_env.py  mjx_task.py  types.py
mjlab/entities/: __init__.py  entity.py  entity_config.py  indexing.py  robot.py  robot_config.py  structs.py
mjlab/entities/arenas/: __init__.py  arena.py  flat_terrain.py  playground_terrain.py
mjlab/entities/common/: config.py  editors.py
mjlab/entities/g1/: __init__.py  g1.py  g1_constants.py
mjlab/entities/go1/: __init__.py  go1.py  go1_constants.py  go1_test.py  main.py
mjlab/entities/robots/: __init__.py  actuator.py  editors.py  load_robot.py  robot.py  robot_config.py  robot_data.py
mjlab/entities/scene/: editors.py  scene.py  scene.xml  scene_config.py
mjlab/entities/t1/: __init__.py  t1.py  t1_constants.py
mjlab/entities/terrains/: __init__.py  editors.py  flat_terrain.py  load_terrain.py  terrain.py  terrain_config.py
mjlab/envs/: __init__.py  direct_env.py  manager_based_env.py  manager_based_env_config.py  manager_based_rl_env.py  manager_based_rl_env_config.py  registry.py
mjlab/envs/manager_based/: g1_locomotion.py  go1_locomotion.py
mjlab/envs/mdp/: __init__.py  events.py  observations.py  rewards.py  terminations.py
mjlab/envs/motion_imitation/: __init__.py  motion_tracking.py  reference_motion.py  timeseries.py
mjlab/envs/playground/: README.md  __init__.py  g1_joystick.py  go1_getup.py  go1_joystick.py  t1_getup.py
mjlab/envs/toy/: README.md  __init__.py  cartpole.py  humanoid.py
mjlab/managers/: __init__.py  action_manager.py  command_manager.py  event_manager.py  manager_base.py  manager_term_config.py  observation_manager.py  reward_manager.py  scene_entity_config.py  termination_manager.py
mjlab/rl/: README.md  __init__.py  config.py  exporter.py  multi_device_wrapper.py  on_policy_runner.py  play.py  train.py  utils.py  vecenv_wrapper.py  wrapper.py
mjlab/rl/runners/: __init__.py  tracking.py
mjlab/scene/: __init__.py  scene.py  scene_config.py
mjlab/sensors/: sensor_base.py
mjlab/sensors/contact_sensor/: __init__.py  contact_sensor.py  contact_sensor_config.py  contact_sensor_data.py
mjlab/sim/: randomization.py  sim.py  sim_config.py  sim_data.py
mjlab/tasks/: __init__.py  go1_getup.py  go1_locomotion.py
mjlab/tasks/locomotion/: __init__.py
mjlab/tasks/manager_based/: g1_locomotion.py  go1_locomotion.py
mjlab/tasks/mdp/: rewards.py
mjlab/tasks/tracking/: tracking_env_cfg.py
mjlab/tasks/utils/: parse_cfg.py
mjlab/utils/: dataclasses.py  math.py  mujoco.py  os.py  random.py  reset.py  spec.py  string.py
mjlab/utils/noise/: __init__.py  noise_model.py
mjlab/utils/spec_editor/: __init__.py  spec_editor.py  spec_editor_config.py
scripts/: clear_wp_cache.sh  generator.py  list_envs.py  offline_render.py  play.py  play_playground.py  play_playground_policy.py  play_tracking.py  zero_agent.py
scripts/generator/: generator.py
scripts/misc/: offline_render.py
scripts/rl/: play.py  train.py  utils.py
scripts/tracking/: compare_npz.py  csv_to_npz.py
scripts/tracking/data/: compare_npz.py  csv_to_npz.py
scripts/tracking/rl/: play.py  train.py
scripts/velocity/: random_agent.py  zero_agent.py
scripts/velocity/rl/: play.py  train.py
src/mjlab/: __init__.py
src/mjlab/asset_zoo/: render_robots.py
src/mjlab/entities/: __init__.py  entity.py  entity_config.py  indexing.py
src/mjlab/entity/: __init__.py  config.py  data.py  entity.py  indexing.py
src/mjlab/envs/: __init__.py  manager_based_env.py  manager_based_env_config.py  manager_based_rl_env.py  manager_based_rl_env_config.py  types.py
src/mjlab/managers/: __init__.py  action_manager.py  command_manager.py  curriculum_manager.py  event_manager.py  manager_base.py  manager_term_config.py  observation_manager.py  reward_manager.py  scene_entity_config.py  termination_manager.py
src/mjlab/rl/: __init__.py  config.py  vecenv_wrapper.py
src/mjlab/scene/: __init__.py  scene.py  scene.xml  scene_config.py
src/mjlab/scripts/: csv_to_npz.py  demo.py  gcs.py  list_envs.py  play.py  random_agent.py  track_timing.py  train.py  zero_agent.py
src/mjlab/sensor/: __init__.py  base.py  builtin.py
src/mjlab/sensors/: __init__.py  sensor_base.py  sensor_base_config.py
src/mjlab/sim/: __init__.py  randomization.py  sim.py  sim_config.py  sim_data.py  sim_data_test.py
src/mjlab/tasks/: __init__.py
src/mjlab/terrains/: README.md  __init__.py  box_terrains.py  config.py  heightfield_terrains.py  mesh_terrains.py  mesh_terrains_cfg.py  primitive_terrains.py  (+6 more)
tests/: smoke_test.py  test_asset_zoo.py  test_builtin_sensor.py  test_contact_sensor.py  test_entity.py  test_g1_constants.py  test_go1_constants.py  test_observations.py  test_os.py  test_rewards.py  test_scene.py  test_sim_data.py  test_spec_config.py  test_terminations.py  test_viser_conversions.py
typings/: generate_mujoco_stubs.sh
typings/mujoco/: __init__.pyi  _constants.pyi  _enums.pyi  _functions.pyi  _structs.pyi  renderer.pyi
(+185 files in other folders)
