[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/mjlab"]

[tool.hatch.build.targets.wheel]
packages = ["src/mjlab"]

[project]
name = "mjlab"
version = "0.0.0"
readme = "README.md"
authors = [
    {name = "Kevin Zakka", email = "zakka@berkeley.edu"},
]
requires-python = ">=3.10"
dynamic = ["description"]
dependencies = [
    "gymnasium==1.2.0",
    "prettytable",
    "tqdm",
    "tyro",
]

[project.optional-dependencies]
test = [
    "absl-py",
    "pytest",
    "pytest-xdist",
    "pre-commit",
]
rl = [
    "mediapy",
    "moviepy >=1.0.0",
    "rsl-rl-lib",
    "tensorboard",
    "wandb",
]

[tool.ruff]
indent-width = 2
exclude = [
  "src/mjlab/third_party",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]